Update and rename java-performance.md to java-jvm.md